--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "web3": "^1.6.1",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
