--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "ethers": "^5.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -19,6 +20,7 @@
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.6.1",
+    "web3-react": "^5.0.5",
     "yarn": "^1.22.17"
   },
   "scripts": {
